2009-03-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/menu-animation/ccm-menu-animation.c
	(ccm_menu_animation_finalize):
	  - Disconnect display event on finalize.
	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_option_changed):
	  - Get new option value on change.
	* src/ccm-display.c (ccm_display_finalize):
	  - Initialize screen in finalize avoid warning on enable/disable 
	    compositing.
	* src/ccm-window.c (ccm_window_get_attribs),
	(ccm_window_on_get_property_async), (ccm_window_unmap):
	  - Emit an error when get geometry window fail.
	  - Unmap also if window is not visible but viewable, this case happen
	    when viewable is set on get window attribs. Avoid some dead window still
	    on desktop
	  - Remove unuseable log.

2009-03-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c (ccm_screen_check_stack), (ccm_screen_restack):
	  - Never restack window below hint desktop window allow fade unmap works.

2009-03-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/freeze/ccm-freeze.c (ccm_freeze_on_event):
      - Check display validy on screen event avoid a crash on ccm unset.
	
2009-03-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/fade/Makefile.am:
	* plugins/fade/ccm-fade.ui:
	* plugins/fade/fade.svg:
	* plugins/fade/ccm-fade.c (ccm_fade_init), (ccm_fade_finalize),
	(ccm_fade_preferences_page_on_duration_changed),
	(ccm_fade_preferences_page_on_config_changed),
	(ccm_fade_preferences_page_on_plugin_changed),
	(ccm_fade_preferences_page_init_effects_section),
	(ccm_fade_preferences_page_iface_init):
	  - Add fade preferences section.
	* lib/ccm-cairo-utils.c (cairo_blur_path):
	  - Minor fixup.
	* plugins/decoration/ccm-decoration.c (ccm_decoration_get_opacity),
	(ccm_decoration_on_option_changed):
	* plugins/decoration/ccm-decoration.ui:
	  - Update decoration on gradiant change.
	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_option_changed):
	  - Fix up shadow refresh on setting change.